swagger work,db tables not correct
